--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
+  margin: 0.5rem;
+  padding: 0.5rem;
 }
 
 .container {
