--- a/src/index.css
+++ b/src/index.css
@@ -221,3 +221,35 @@ h1 {
   font-size: 1.25rem;
   line-height: 1.5;
 }
+
+.buttoninfo {
+  /* btn */
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+  /* btn-info */
+  color: #ffffff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+
+  /* btn-rounded */
+  border-radius: 50rem;
+
+  /* btn-lg */
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
